增加GWT&SmartGWT支持